# Chatbot

./: .gitignore  1 basic.ipynb  10 crew.ipynb  12 crew extension.ipynb  2 fewshot prompt.ipynb  3 pipline prompt.ipynb  4 cache, usage.ipynb  5 memory.ipynb  6 rag.ipynb  7 function calling.ipynb  8 agent.ipynb  9 pinecone.ipynb  blog_post.md  competitors_task.md  financial_analysis.md  healthy_recipe.md  home.py  ideas_task.md  inspiration_task.md  investment_recommendation.md  main.py  normal_recipe.md  pyproject.toml  requirements.txt  research_task.md  script_task.md  selection_task.md  stock_news.md  technical_analysis.md  website.txt
assignments/: assignment 3.ipynb  assignment 4.ipynb
db/: chroma.sqlite3
pages/: 1 document.py  2 quiz.py  3 video.py  4 investor.py
