[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "KimHakHyun",email = "hakhyun0615@naver.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "crewai==0.30.11",
    "crewai-tools==0.2.6",
    "ipykernel==6.29.4",
    "ipython==8.24.0",
    "jupyter_client==8.6.2",
    "jupyter_core==5.7.2",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-core==0.1.52",
    "langchain-openai==0.0.5",
    "langchain-text-splitters==0.0.2",
    "langsmith==0.1.63",
    "openai (>=1.12.0)",
    "pydantic==2.7.1",
    "pydantic_core==2.18.2",
    "python-dotenv==1.0.1",
    "tiktoken==0.5.2",
    "yfinance==0.2.40",
    "streamlit (>=1.45.1,<2.0.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"